[package]
name = "arcdps"
version = "0.5.2"
authors = ["Greaka <mrgreaka@gmail.com>"]
edition = "2018"

[dependencies]
once_cell = "1.4"

[dependencies.arcdps_codegen]
path = "../codegen"

[dependencies.imgui]
#git = "https://github.com/greaka/imgui-rs"
git = "https://github.com/gw2scratch/imgui-rs"
features = ["tables-api"]

[dependencies.log]
version = "0.4"
optional = true
features = ["std"]

[features]
default = ["log"]
